chore: Changed macos maven build profile to check executables' version is working or not